fix(java): fix compiler warnings after java upgrade